# backloggd-discord

./: .gitignore  Cargo.toml  Containerfile  Containerfile.sqlite  README.md  backloggd-discord.sln  compose.yml  go.mod  go.sum  main.go
.github/workflows/: go-release.yml
backloggd/: review.go  user.go
bot/: bot.go
dotnet/: BackloggdBot.csproj  BackloggdBotService.cs  Program.cs
dotnet/Models/: RssChannel.cs  RssFeed.cs  RssImage.cs  RssItem.cs
dotnet/Options/: BackloggdBotOptions.cs  BotConfig.cs
dotnet/Scraper/: Scraper.cs
go/bot/: bot.go
go/config/: botconfig.go
go/markdown/: markdown.go
go/types/: result.go  rss.go
rust/: Cargo.toml
rust/src/: main.rs
rust/src/commands/: sub.rs
rust/src/core/: converter.rs  mod.rs  parser.rs  validator.rs
rust/src/test/: converter_tests.rs  mod.rs  validator_tests.rs
scraper/: scraper.go
src/: main.rs
src/commands/: about.rs  help.rs  list.rs  mod.rs  sub.rs  unsub.rs
src/core/: config.rs  converter.rs  mod.rs  models.rs  parser.rs  publisher.rs  repository.rs  scraper.rs  validator.rs
src/test/: converter_tests.rs  parser_tests.rs
