[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
chrono = "0.4.40"
libsql = "0.6.0"
poise = "0.6.1"
regex = "1.11.1"
serde = "1.0.219"
serde-xml-rs = "0.6.0"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-loki = "=0.2.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

